# Blood-Bank-Management-System.

./: .env.example  .gitignore  Blood_Bank_Schema.docx  DBMS_Project_Review.docx  README.md  database_state.json  inteligence-layer.sql  main.py  package-lock.json  pyproject.toml  req.txt  schema.sql  setup.sh
backend/: __init__.py  blood_bank_backend.py  blood_bank_fastapi.py  requirements.txt
config/: __init__.py  database.py
database/: blood_bank_management.sql
env/: pyvenv.cfg
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
models/: __init__.py  alert.py  allocation.py  assignment.py  blood_unit.py  bloodbank.py  campaign.py  donor.py  hospital.py  patient.py  referral.py  reports.py  request.py  smart_operations.py  staff.py  transaction.py
project_redefined/database/: test.sql
routes/: __init__.py  alert.py  allocation.py  assignment.py  blood_unit.py  bloodbank.py  donor.py  maintenance.py  patient.py  referral.py  reports.py  request.py  smart_operations.py  staff.py  transaction.py
services/: __init__.py  alert_service.py  assignment_service.py  blood_unit_service.py  campaign_service.py  donor_service.py  hospital_service.py  maintenance_service.py  patient_service.py  referral_service.py  report_service.py  request_service.py  smart_service.py  staff_service.py  transaction_service.py
tests/: __init__.py
utils/: __init__.py
