[project]
name = "akanksh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.104.1",
	"uvicorn>=0.24.0",
	"mysql-connector-python>=8.2.0",
	"pydantic>=2.5.0",
	"python-multipart>=0.0.6",
	"email-validator>=2.3.0",
]
